--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,5 @@
-S3_KEY=
-S3_SECRET=
+RAILS_MASTER_KEY=
+
 AWS_SDK_CONFIG_OPT_OUT=true
 
 COMPOSE_PROJECT_NAME=transientbug_rails
@@ -7,6 +7,7 @@ COMPOSE_PROJECT_NAME=transientbug_rails
 RAILS_ENV=production
 RAILS_SERVE_STATIC_FILES=true
 RAILS_LOG_TO_STDOUT=true
+
 PORT=3000
 
 DATABASE_URL=postgresql://transientbug:yourpassword@postgres:5432/transientbug_production?encoding=utf8&pool=5&timeout=5000
