--- a/config/storage.yml
+++ b/config/storage.yml
@@ -4,8 +4,8 @@ local:
 
 s3:
   service: S3
-  access_key_id: <%= ENV["S3_KEY"] %>
-  secret_access_key: <%= ENV["S3_SECRET"] %>
+  access_key_id: <%= Rails.application.credentials.aws[:access_key_id] %>
+  secret_access_key: <%= Rails.application.credentials.aws[:secret_access_key] %>
   region: nyc3
   endpoint: https://nyc3.digitaloceanspaces.com
   force_path_style: true
