--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,68 +1,94 @@
-version: '2'
+version: "3"
 
 services:
   postgres:
-    image: 'postgres:9.6-alpine'
+    image: "postgres:9.6-alpine"
     environment:
-      POSTGRES_USER: 'transientbug'
-      POSTGRES_PASSWORD: 'yourpassword'
-    ports:
-      - '5432:5432'
+      POSTGRES_USER: "transientbug"
+      POSTGRES_PASSWORD: "yourpassword"
+    networks:
+      - "services"
     volumes:
-      - 'postgres:/var/lib/postgresql/data'
+      - "postgres:/var/lib/postgresql/data"
 
   elasticsearch:
-    image: 'blacktop/elasticsearch:5.6'
-    ports:
-      - '9200:9200'
+    image: "blacktop/elasticsearch:5.6"
+    networks:
+      - "services"
     volumes:
-      - 'elasticsearch:/usr/share/elasticsearch/data'
+      - "elasticsearch:/usr/share/elasticsearch/data"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9200/_cluster/health"]
+      interval: 1m30s
+      timeout: 10s
+      retries: 3
 
   redis:
-    image: 'redis:3.2-alpine'
-    ports:
-      - '6379:6379'
+    image: "redis:4-alpine"
+    networks:
+      - "services"
     volumes:
-      - 'redis:/data'
+      - "redis:/data"
 
   website:
     depends_on:
-      - 'postgres'
-      - 'elasticsearch'
-      - 'redis'
-    build: .
+      - "postgres"
+      - "elasticsearch"
+      - "redis"
+    build:
+      context: .
+      args:
+        rails_master_key: ${RAILS_MASTER_KEY}
     ports:
-      - '3000:3000'
+      - "3000:3000"
     volumes:
-      - '.:/app'
+      - ".:/app"
+    networks:
+      - "exposed"
+      - "services"
     env_file:
-      - '.env'
+      - ".env"
 
   sidekiq:
     depends_on:
-      - 'postgres'
-      - 'elasticsearch'
-      - 'redis'
-    build: .
-    command: sidekiq -C config/sidekiq.yml
+      - "postgres"
+      - "elasticsearch"
+      - "redis"
+    build:
+      context: .
+      args:
+        rails_master_key: ${RAILS_MASTER_KEY}
+    command: bundle exec sidekiq -C config/sidekiq.yml
     volumes:
-      - '.:/app'
+      - ".:/app"
+    networks:
+      - "services"
     env_file:
-      - '.env'
+      - ".env"
 
   cable:
     depends_on:
-      - 'redis'
-    build: .
-    command: puma -p 28080 cable/config.ru
+      - "redis"
+    build:
+      context: .
+      args:
+        rails_master_key: ${RAILS_MASTER_KEY}
+    command: bundle exec puma -p 28080 cable/config.ru
     ports:
-      - '28080:28080'
+      - "28080:28080"
     volumes:
-      - '.:/app'
+      - ".:/app"
+    networks:
+      - "exposed"
+      - "services"
     env_file:
-      - '.env'
+      - ".env"
 
 volumes:
   redis:
   postgres:
   elasticsearch:
+
+networks:
+  exposed:
+  services:
