--- a/.env.template
+++ b/.env.template
@@ -4,9 +4,9 @@ AWS_SDK_CONFIG_OPT_OUT=true
 
 COMPOSE_PROJECT_NAME=transientbug_rails
 
-RAILS_ENV=production
-RAILS_SERVE_STATIC_FILES=true
-RAILS_LOG_TO_STDOUT=true
+#RAILS_ENV=production
+#RAILS_SERVE_STATIC_FILES=true
+#RAILS_LOG_TO_STDOUT=true
 
 PORT=3000
 
