update things to get working with new bot pattern hopefully

--- a/config/autumn_moon.yml
+++ b/config/autumn_moon.yml
@@ -1,17 +1,17 @@
-#default: &default
-  #transientbug_bot:
-    #token: <%= Rails.application.credentials.bot_tokens[:transientbug_bot] %>
-    #klass: SampleBot
+default: &default
+  transientbug_bot:
+    token: <%= Rails.application.credentials.bot_tokens[:transientbug_bot] %>
+    klass: SampleBot
 
-#development:
-  #<<: *default
+development:
+  <<: *default
 
-  #transientbugDev_bot:
-    #token: <%= Rails.application.credentials.bot_tokens[:transientbugDev_bot] %>
-    #klass: SampleBot
+  transientbugDev_bot:
+    token: <%= Rails.application.credentials.bot_tokens[:transientbugDev_bot] %>
+    klass: SampleBot
 
-#test:
-  #<<: *default
+test:
+  <<: *default
 
-#production:
-  #<<: *default
+production:
+  <<: *default
