--- a/test/fixtures/tags.yml
+++ b/test/fixtures/tags.yml
@@ -1,11 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  user: one
-  name: MyText
-  disabled: false
+  label: MyText
+  color: MyText
 
 two:
-  user: two
-  name: MyText
-  disabled: false
+  label: MyText
+  color: MyText
