--- a/test/fixtures/webpages.yml
+++ b/test/fixtures/webpages.yml
@@ -1,9 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  url: MyString
-  body: MyText
+  uri: MyText
 
 two:
-  url: MyString
-  body: MyText
+  uri: MyText
