--- a/config/database.yml
+++ b/config/database.yml
@@ -56,8 +56,12 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
+  <% if ENV["CI"] %>
+  database: travis_ci_test
+  <% else %>
   <<: *default
   database: transientbug_test
+  <% end %>
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
