--- a/.travis.yml
+++ b/.travis.yml
@@ -31,8 +31,10 @@ matrix:
   fast_finish: true
 
 env:
-  - ES_VERSION=5.5.1 ES_DOWNLOAD_URL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-${ES_VERSION}.tar.gz
-  - RACK_ENV=test
+  global:
+    - ES_VERSION=5.5.1
+    - ES_DOWNLOAD_URL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-${ES_VERSION}.tar.gz
+    - RACK_ENV=test
 
 before_install:
   - wget ${ES_DOWNLOAD_URL}
