--- a/.travis.yml
+++ b/.travis.yml
@@ -34,12 +34,12 @@ env:
   global:
     - ES_VERSION=5.5.1
     - ES_DOWNLOAD_URL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-${ES_VERSION}.tar.gz
-    - RACK_ENV=test
 
 before_install:
   - wget ${ES_DOWNLOAD_URL}
   - tar -xzf elasticsearch-${ES_VERSION}.tar.gz
   - ./elasticsearch-${ES_VERSION}/bin/elasticsearch &
+  - yarn install
 #  - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.3.2
 #  - export PATH=$HOME/.yarn/bin:$PATH
 
@@ -51,6 +51,6 @@ jobs:
     - stage: test
       script: bundle exec rspec
     - stage: stylistic
-      script: bundle exec pronto run #-f github_status -c origin/master
+      script: bundle exec pronto run -f github_status -c origin/master
     - stage: docs
       script: bundle exec yard
