--- a/.travis.yml
+++ b/.travis.yml
@@ -35,21 +35,10 @@ env:
     - ES_VERSION=5.5.1
     - ES_DOWNLOAD_URL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-${ES_VERSION}.tar.gz
 
-before_install:
-  - wget ${ES_DOWNLOAD_URL}
-  - tar -xzf elasticsearch-${ES_VERSION}.tar.gz
-  - ./elasticsearch-${ES_VERSION}/bin/elasticsearch &
-  - yarn install
-#  - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.3.2
-#  - export PATH=$HOME/.yarn/bin:$PATH
-
-before_script:
-  - wget -q --waitretry=1 --retry-connrefused -T 10 -O - http://127.0.0.1:9200
-
 jobs:
   include:
     - stage: test
-      script: bundle exec rspec
+      script: ./.travis/rspec
     - stage: stylistic
       script: bundle exec pronto run -f github_status -c origin/master --exit-code
     - stage: docs
