--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -106,6 +106,11 @@ Layout/TrailingBlankLines:
 Style/Alias:
   Enabled: false # Use either as we see fit
 
+# All of rails uses this compact definition so lets just not fight it
+Style/ClassAndModuleChildren:
+  Exclude:
+    - app/**/*.rb
+
 # This is the ugliest rule and makes it hard to read what is getting
 # assigned, imo.
 Style/ConditionalAssignment:
