--- a/Dockerfile.rails
+++ b/Dockerfile.rails
@@ -67,3 +67,34 @@ RUN echo "install: --no-document" > $HOME/.gemrc &&\
     su elasticsearch -c '/bin/sh /opt/elasticsearch/bin/elasticsearch -d' &&\
     su postgres -c 'pg_ctl -w start' &&\
     bundle exec rake DATABASE_URL=postgresql://docker@127.0.0.1/docker docs:generate assets:precompile
+
+FROM ruby:2.4-alpine3.6
+LABEL maintainer="Josh Ashby <me@joshisa.ninja>"
+
+RUN echo -e 'http://dl-cdn.alpinelinux.org/alpine/edge/main' >> /etc/apk/repositories &&\
+    echo -e 'http://dl-cdn.alpinelinux.org/alpine/edge/community' >> /etc/apk/repositories &&\
+    echo -e 'http://dl-cdn.alpinelinux.org/alpine/edge/testing' >> /etc/apk/repositories &&\
+    apk add --no-cache --update build-base \
+                                postgresql-dev \
+                                git \
+                                curl \
+                                nodejs-current \
+                                yarn
+
+RUN mkdir /app &&\
+    mkdir /dropzone
+
+WORKDIR /app
+
+COPY . .
+
+COPY --from=0 /app/doc /app/doc
+COPY --from=0 /app/public /app/public
+
+RUN echo "install: --no-document" > $HOME/.gemrc &&\
+    echo "update: --no-document" >> $HOME/.gemrc &&\
+    bundle install --binstubs --jobs 4 --without development test
+
+VOLUME ["/app/public", "/dropzone"]
+
+CMD bundle exec puma -C config/puma.rb
