--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,9 @@ services:
 
   elasticsearch:
     image: "blacktop/elasticsearch:5.6"
+    environment:
+      ES_JAVA_OPTS: "-Xms512m -Xmx512m"
+      discovery.type: "single-node"
     networks:
       - "services"
     volumes:
