--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ts-loader": "^2.3.2",
     "typescript": "^2.4.2",
     "typings-for-css-modules-loader": "^1.5.0",
+    "uuid": "^3.2.1",
     "webpack": "^3.5.3",
     "webpack-manifest-plugin": "^1.3.0",
     "webpack-merge": "^4.1.0"
