--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^15.6.1",
     "resolve-url-loader": "^2.1.0",
     "sass-loader": "^6.0.6",
+    "semantic-ui-react": "^0.81.1",
     "style-loader": "^0.18.2",
     "ts-loader": "^2.3.2",
     "typescript": "^2.4.2",
