Guardfile and updated gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,9 @@
 /storage
 /coverage
 
+# Rspec and yard items
+/doc
+/.yardoc
 /spec/examples.txt
 
 # Ignore master key for decrypting credentials and more.
