first pass at breaking up travis script and building assets on travis

--- a/.gitignore
+++ b/.gitignore
@@ -24,5 +24,8 @@
 /storage
 /coverage
 
+/spec/examples.txt
+/.yardoc
+
 # Ignore master key for decrypting credentials and more.
 /config/master.key
