--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
   "exclude": [
     "**/*.spec.ts",
     "node_modules",
-    "public"
+    "public",
+    "vendor/bundle"
   ],
   "compileOnSave": false
 }
