--- a/.travis.yml
+++ b/.travis.yml
@@ -40,14 +40,14 @@ env:
 
 jobs:
   include:
-    - stage: test
-      script: .travis/rspec
+    #- stage: test
+      #script: .travis/rspec
 
-    - stage: stylistic
-      script: bundle exec pronto run -f github_status -c origin/master
+    #- stage: stylistic
+      #script: bundle exec pronto run -f github_status -c origin/master
 
-    - stage: docs
-      script: bundle exec yard
+    #- stage: docs
+      #script: bundle exec yard
 
     - stage: compile
       script: .travis/assets
