small updates after the other big update merges

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -92,6 +92,9 @@ Layout/SpaceInsideStringInterpolation:
 Layout/SpaceInsideReferenceBrackets:
   Enabled: false
 
+Layout/SpaceInsideArrayLiteralBrackets:
+  Enabled: false
+
 Layout/SpaceInsideParens:
   Enabled: false
 
