--- a/package.json
+++ b/package.json
@@ -42,9 +42,7 @@
     "uuid": "^3.2.1",
     "webpack": "^3.5.3",
     "webpack-manifest-plugin": "^1.3.0",
-    "webpack-merge": "^4.1.0"
-  },
-  "devDependencies": {
+    "webpack-merge": "^4.1.0",
     "webpack-dev-server": "2.11.2"
   }
 }
