--- a/package.json
+++ b/package.json
@@ -2,11 +2,19 @@
   "name": "transientbug",
   "private": true,
   "dependencies": {
-    "@rails/webpacker": "3.5",
     "@types/react": "^16.0.2",
     "@types/react-dom": "^15.5.2",
+    "lodash": "^4.17.10",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "semantic-ui-react": "^0.81.1",
+    "uuid": "^3.2.1"
+  },
+  "devDependencies": {
+    "@rails/webpacker": "3.5",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.25.0",
+    "babel-eslint": "^8.2.5",
     "babel-loader": "7.x",
     "babel-plugin-module-resolver": "^2.7.1",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
@@ -19,6 +27,12 @@
     "coffee-script": "^1.12.7",
     "compression-webpack-plugin": "^1.0.0",
     "css-loader": "^0.28.4",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^17.0.0",
+    "eslint-loader": "^2.0.0",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.10.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
     "glob": "^7.1.2",
@@ -30,19 +44,15 @@
     "postcss-smart-import": "^0.7.5",
     "precss": "^2.0.0",
     "rails-erb-loader": "^5.1.0",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
     "resolve-url-loader": "^2.1.0",
     "sass-loader": "^6.0.6",
-    "semantic-ui-react": "^0.81.1",
     "style-loader": "^0.18.2",
     "ts-loader": "^2.3.2",
     "typescript": "^2.4.2",
     "typings-for-css-modules-loader": "^1.5.0",
-    "uuid": "^3.2.1",
     "webpack": "^3.5.3",
+    "webpack-dev-server": "2.11.2",
     "webpack-manifest-plugin": "^1.3.0",
-    "webpack-merge": "^4.1.0",
-    "webpack-dev-server": "2.11.2"
+    "webpack-merge": "^4.1.0"
   }
 }
