update some rubocop rules to be a little more in line and forgiving
especially around rails code where the ABC rule could trigger on any controller
unless you only did like ONE thing

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -17,12 +17,21 @@ AllCops:
 Bundler/OrderedGems:
   TreatCommentsAsGroupSeparators: true
 
+Metrics/AbcSize:
+  Max: 30
+
 Metrics/BlockLength:
   Exclude:
     - db/**/*.rb
     - spec/**/**_spec.rb
     - spec/support/examples/**.rb
     - config/routes/**/*.rb
+
+Metrics/ClassLength:
+  Enabled: false
+
+Metrics/CyclomaticComplexity:
+  Enabled: false
 
 # Configuration parameters: AllowHeredoc, AllowURI, URISchemes, IgnoreCopDirectives, IgnoredPatterns.
 # URISchemes: http, https
@@ -37,6 +46,9 @@ Metrics/LineLength:
 
 Metrics/MethodLength:
   Max: 30
+
+Metrics/ModuleLength:
+  Enabled: false
 
 Naming/FileName:
   Exclude:
