--- a/package.json
+++ b/package.json
@@ -2,14 +2,9 @@
   "name": "transientbug",
   "private": true,
   "dependencies": {
+    "@rails/webpacker": "3.5",
     "@types/react": "^16.0.2",
     "@types/react-dom": "^15.5.2",
-    "lodash": "^4.17.10",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "semantic-ui-react": "^0.81.1",
-    "uuid": "^3.2.1",
-    "@rails/webpacker": "3.5",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.25.0",
     "babel-eslint": "^8.2.5",
@@ -36,18 +31,24 @@
     "glob": "^7.1.2",
     "ignore-loader": "^0.1.2",
     "js-yaml": "^3.9.1",
+    "lodash": "^4.17.10",
+    "mousetrap": "^1.6.2",
     "node-sass": "^4.5.3",
     "path-complete-extname": "^0.1.0",
     "postcss-loader": "^2.0.6",
     "postcss-smart-import": "^0.7.5",
     "precss": "^2.0.0",
     "rails-erb-loader": "^5.1.0",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
     "resolve-url-loader": "^2.1.0",
     "sass-loader": "^6.0.6",
+    "semantic-ui-react": "^0.81.1",
     "style-loader": "^0.18.2",
     "ts-loader": "^2.3.2",
     "typescript": "^2.4.2",
     "typings-for-css-modules-loader": "^1.5.0",
+    "uuid": "^3.2.1",
     "webpack": "^3.5.3",
     "webpack-dev-server": "2.11.2",
     "webpack-manifest-plugin": "^1.3.0",
