--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -20,7 +20,11 @@ Bundler/OrderedGems:
 Metrics/AbcSize:
   Max: 30
 
+# This is an issue for most DSL's and since ruby is highly conducive to DSL's
+# this rule doesn't really make a lot of sense and is really a deterant towards
+# a tool of the language
 Metrics/BlockLength:
+  Enabled: false
   Exclude:
     - db/**/*.rb
     - spec/**/**_spec.rb
@@ -154,6 +158,9 @@ Style/NumericPredicate:
   Enabled: false
 
 Style/NumericLiterals:
+  Enabled: false
+
+Style/MethodDefParentheses:
   Enabled: false
 
 # Configuration parameters: EnforcedStyle, SupportedStyles, AllowInnerSlashes.
