working on filling out files at least for specs
also redo the parser specs to just verify it parses it correctly

--- a/.rubocop_rspec.yml
+++ b/.rubocop_rspec.yml
@@ -24,6 +24,8 @@ RSpec/EmptyExampleGroup:
 RSpec/ExampleLength:
   Description: Checks for long examples.
   Enabled: true
+  Exclude:
+    - spec/searchers/query_grammar/parser_spec.rb
 
 RSpec/ExampleWording:
   Description: Checks that example descriptions do not start with "should".
