security gem updates, remove bootstrap from package.json
also had to fix a breaking change introduced in Doorkeeper::AccessToken.revoke_all_for
which changed the return from an array of the models to a number representing the number
of rows updated
also handle soon to be deprecated features from factorybot factories
also fix an issue with html element ids being sanitized on checkboxes but not
divs and such for bulk actions as per this nice little private undocumented feature
https://github.com/rails/rails/blob/299a213a738e078c6fbddd488a711ea9bb066fe2/actionview/lib/action_view/helpers/form_tag_helper.rb#L892

--- a/.rubocop_rspec.yml
+++ b/.rubocop_rspec.yml
@@ -86,3 +86,6 @@ RSpec/NestedGroups:
 RSpec/NotToNot:
   Description: Checks for consistent method usage for negating expectations.
   Enabled: true
+
+FactoryBot/StaticAttributeDefinedDynamically:
+  Enabled: false
