--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "typings-for-css-modules-loader": "^1.5.0",
     "uuid": "^3.2.1",
     "webpack": "^3.5.3",
-    "webpack-dev-server": "2.11.2",
+    "webpack-dev-server": ">=3.1.11",
     "webpack-manifest-plugin": "^1.3.0",
     "webpack-merge": "^4.1.0"
   }
