apparently bundler is no longer installed in the travis images? wtf

--- a/.travis.yml
+++ b/.travis.yml
@@ -38,6 +38,8 @@ env:
     - ES_DOWNLOAD_URL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-${ES_VERSION}.tar.gz
     - PULL_REQUEST_ID=$TRAVIS_PULL_REQUEST
 
+before_install: gem install bundler
+
 jobs:
   include:
     - stage: test
