--- a/.travis.yml
+++ b/.travis.yml
@@ -48,7 +48,10 @@ jobs:
       script: .travis/rspec
 
     - stage: stylistic
-      script: bundle exec pronto run -f github_status -c origin/master
+      script: bundle exec rubocop
+
+    - stage: stylistic
+      script: yarn eslint app/javascript/**/*
 
     - stage: docs
       script: bundle exec yard
