rubocop the things

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,13 +6,15 @@ AllCops:
   DisplayCopNames: true
   DisplayStyleGuide: true
   Include:
-    - "**/*.rb"
+    - '**/*.rb'
     - '**/Rakefile'
   Exclude:
-    - bin/*
+    - 'db/**/*'
+    - 'config/**/*'
+    - 'script/**/*'
+    - 'bin/*'
+    - 'storage/**/*'
     - node_modules/**/* # why the fuck is rubocop running against node_modules
-    - db/migrate/*
-    - db/schema.rb
     - vendor/**/* # disable rubocop-ing the gem install path in travis
 
 # Configuration parameters: Include, TreatCommentsAsGroupSeparators.
