--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,11 @@ rvm:
   - 2.5
 
 nvm:
-  - 8.3.0
+  - 12.6
 
 addons:
-  chrome: stable
   postgresql: "9.6"
+  #chrome: stable
 
 services:
   - postgresql
@@ -39,6 +39,7 @@ env:
 before_install:
   - gem update --system
   - gem install bundler
+  - nvm install
   - yarn install
 
 jobs:
