add a package.json script for linting; fix travis linter stage

--- a/.travis.yml
+++ b/.travis.yml
@@ -54,7 +54,7 @@ jobs:
 
     - stage: stylistic
       name: ESLint
-      script: yarn eslint app/javascript/**/*
+      script: yarn lint
 
     - stage: docs
       name: Yard
