--- a/package.json
+++ b/package.json
@@ -2,55 +2,32 @@
   "name": "transientbug",
   "private": true,
   "dependencies": {
-    "@rails/webpacker": "3.5",
-    "@types/react": "^16.0.2",
-    "@types/react-dom": "^15.5.2",
-    "autoprefixer": "^7.1.2",
-    "babel-core": "^6.25.0",
-    "babel-eslint": "^8.2.5",
-    "babel-loader": "7.x",
-    "babel-plugin-module-resolver": "^2.7.1",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-react": "^6.24.1",
-    "coffee-loader": "^0.7.3",
-    "coffee-script": "^1.12.7",
-    "compression-webpack-plugin": "^1.0.0",
-    "css-loader": "^0.28.4",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^17.0.0",
-    "eslint-loader": "^2.0.0",
-    "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.10.0",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^0.11.2",
-    "glob": "^7.1.2",
-    "ignore-loader": "^0.1.2",
-    "js-yaml": "^3.9.1",
+    "@rails/webpacker": "^4.0.7",
+    "@types/react": "^16.8.23",
+    "@types/react-dom": "^16.8.4",
     "lodash": "^4.17.13",
     "mousetrap": "^1.6.2",
-    "node-sass": "^4.5.3",
-    "path-complete-extname": "^0.1.0",
-    "postcss-loader": "^2.0.6",
-    "postcss-smart-import": "^0.7.5",
-    "precss": "^2.0.0",
-    "rails-erb-loader": "^5.1.0",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "resolve-url-loader": "^2.1.0",
-    "sass-loader": "^6.0.6",
+    "prettier": "^1.18.2",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "semantic-ui-react": "^0.81.1",
-    "style-loader": "^0.18.2",
-    "ts-loader": "^2.3.2",
-    "typescript": "^2.4.2",
-    "typings-for-css-modules-loader": "^1.5.0",
-    "uuid": "^3.2.1",
-    "webpack": "^3.5.3",
-    "webpack-dev-server": ">=3.1.11",
-    "webpack-manifest-plugin": "^1.3.0",
-    "webpack-merge": "^4.1.0"
+    "uuid": "^3.2.1"
+  },
+  "devDependencies": {
+    "@babel/preset-react": "^7.0.0",
+    "babel-eslint": "^10.0.2",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "eslint": "^6.0.1",
+    "eslint-config-airbnb": "^17.1.1",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-loader": "^2.2.1",
+    "eslint-plugin-import": "^2.18.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.2",
+    "ts-loader": "^6.0.4",
+    "typescript": "^3.5.3",
+    "webpack-dev-server": "^3.7.2"
   }
 }
