--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@babel/preset-react": "^7.0.0",
+    "@types/mousetrap": "^1.6.3",
     "babel-eslint": "^10.0.2",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "eslint": "^6.0.1",
