--- a/package.json
+++ b/package.json
@@ -7,16 +7,13 @@
     "watch-typings": "yarn run tsm app/javascript/**/*.scss -w"
   },
   "dependencies": {
-    "lodash": "^4.17.13",
-    "mousetrap": "^1.6.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "prettier": "^1.18.2",
     "@babel/preset-react": "^7.0.0",
     "@rails/webpacker": "^4.0.7",
+    "@types/mousetrap": "^1.6.3",
     "@types/react": "^16.8.23",
     "@types/react-dom": "^16.8.4",
-    "@types/mousetrap": "^1.6.3",
+    "@typescript-eslint/eslint-plugin": "^1.12.0",
+    "@typescript-eslint/parser": "^1.12.0",
     "babel-eslint": "^10.0.2",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "eslint": "^6.0.1",
@@ -24,6 +21,11 @@
     "eslint-loader": "^2.2.1",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.2",
+    "lodash": "^4.17.13",
+    "mousetrap": "^1.6.2",
+    "prettier": "^1.18.2",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "ts-loader": "^6.0.4",
     "typed-scss-modules": "^0.0.10",
     "typescript": "^3.5.3",
