--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "private": true,
   "scripts": {
     "lint": "eslint 'app/javascript/'",
-    "gen-typings": "yarn run tsm app/javascript/**/*.scss",
-    "watch-typings": "yarn run tsm app/javascript/**/*.scss -w"
+    "gen-typings": "yarn run tsm app/javascript/**/*.module.scss",
+    "watch-typings": "yarn run tsm app/javascript/**/*.module.scss -w"
   },
   "dependencies": {
     "@babel/preset-react": "^7.0.0",
