--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "prettier": "^1.18.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react_ujs": "^2.6.0",
     "ts-loader": "^6.0.4",
     "typed-scss-modules": "^0.0.10",
     "typescript": "^3.5.3",
