--- a/config/cable.yml
+++ b/config/cable.yml
@@ -2,9 +2,9 @@ development:
   adapter: async
 
 test:
-  adapter: async
+  adapter: test
 
 production:
   adapter: redis
-  url: redis://redis:6379/1
+  url: <%= ENV.fetch("REDIS_URL") { "redis://redis:6379/1" } %>
   channel_prefix: transientbug_production
