--- a/config/storage.yml
+++ b/config/storage.yml
@@ -2,6 +2,10 @@ local:
   service: Disk
   root: <%= Rails.root.join("storage") %>
 
+test:
+  service: Disk
+  root: <%= Rails.root.join("tmp/storage") %>
+
 dropzone:
   service: Disk
   root: /dropzone
