--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -15,7 +15,7 @@ jobs:
           ruby-version: 2.6.x
 
       - name: Rubocop Linter
-        uses: andrewmcodes/rubocop-linter-action@0.1.2
+        uses: andrewmcodes/rubocop-linter-action@v0.1.2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
