--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -60,7 +60,7 @@ jobs:
       - name: Install libraries
         run: |
           sudo apt-get update
-          sudo apt-get install -y postgresql-client libpq-dev
+          sudo apt-get install -y postgresql-client libpq-dev sqlite3 libsqlite3-dev
 
       - name: Install deps
         run: |
