--- a/config/database.yml
+++ b/config/database.yml
@@ -62,6 +62,7 @@ test:
   <% else %>
   database: transientbug_test
   <% end %>
+  url: <%= ENV.fetch('DATABASE_URL', '') %>
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
