--- a/config/database.yml
+++ b/config/database.yml
@@ -63,6 +63,7 @@ test:
   database: transientbug_test
   <% end %>
   host: <%= ENV.fetch "DATABASE_HOST", "" %>
+  username: <%= ENV.fetch "DATABASE_USER", "" %>
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
