--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -13,6 +13,7 @@ jobs:
           - 5432:5432
         env:
           POSTGRES_PASSWORD: ""
+          POSTGRES_DATABASE: "transientbug_test"
 
       redis:
         image: redis
@@ -55,5 +56,6 @@ jobs:
           bundle exec rails db:prepare
         env:
           DATABASE_HOST: localhost
+          DATABASE_USER: postgres
           RAILS_ENV: test
           NODE_ENV: test
