try out making use of github service ports config

--- a/.travis.yml
+++ b/.travis.yml
@@ -41,6 +41,7 @@ before_install:
   - gem install bundler
   - nvm install
   - yarn install
+  - psql -c 'create database transientbug_test;' -U postgres
 
 jobs:
   include:
