--- a/.github/workflows/specs.yml
+++ b/.github/workflows/specs.yml
@@ -16,20 +16,21 @@ jobs:
       postgres:
         image: postgres:10.8
         ports:
-          - 5432:5432
+          - 5432/tcp
         env:
+          POSTGRES_USER: "postgres"
           POSTGRES_PASSWORD: ""
           POSTGRES_DATABASE: "transientbug_test"
 
       redis:
         image: redis
         ports:
-          - 6379:6379
+          - 6379/tcp
 
       elasticsearch:
         image: blacktop/elasticsearch:5.6
         ports:
-          - 9200:9200
+          - 9200/tcp
         env:
           ES_JAVA_OPTS: "-Xms512m -Xmx512m"
           discovery.type: "single-node"
@@ -61,8 +62,9 @@ jobs:
         run: |
           bundle exec rails db:prepare
         env:
-          DATABASE_HOST: localhost
-          DATABASE_USER: postgres
+          DATABASE_URL: postgresql://localhost:${{ job.services.postgres.ports['5432'] }}/transientbug_test
+          REDIS_URL: redis://localhost:${{ job.services.redis.ports['6379'] }}/0
+          ELASTICSEARCH_URL: http://localhost:${{ job.services.elasticsearch.ports['9200'] }}
           RAILS_ENV: test
           NODE_ENV: test
 
@@ -70,7 +72,8 @@ jobs:
         run: |
           bundle exec rake
         env:
-          DATABASE_HOST: localhost
-          DATABASE_USER: postgres
+          DATABASE_URL: postgresql://localhost:${{ job.services.postgres.ports['5432'] }}/transientbug_test
+          REDIS_URL: redis://localhost:${{ job.services.redis.ports['6379'] }}/0
+          ELASTICSEARCH_URL: http://localhost:${{ job.services.elasticsearch.ports['9200'] }}
           RAILS_ENV: test
           NODE_ENV: test
