--- a/config/database.yml
+++ b/config/database.yml
@@ -57,13 +57,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  <% if ENV["CI"] %>
-  database: travis_ci_test
-  <% else %>
-  database: transientbug_test
-  <% end %>
-  host: <%= ENV.fetch "DATABASE_HOST", "" %>
-  username: <%= ENV.fetch "DATABASE_USER", "" %>
+  url: <%= ENV.fetch "DATABASE_URL", "postgresql://postgres:@localhost:5432/transientbug_test" %>
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -86,7 +80,4 @@ test:
 #
 production:
   <<: *default
-  url: <%= ENV['DATABASE_URL'] %>
-  database: transientbug_production
-  username: transientbug
-  password: <%= ENV.fetch 'TRANSIENTBUG_DATABASE_PASSWORD', "yourpassword" %>
+  url: <%= ENV.fetch "DATABASE_URL", "" %>
