wire up the action to the styles workflow

--- a/.github/workflows/styles.yml
+++ b/.github/workflows/styles.yml
@@ -15,18 +15,10 @@ jobs:
     steps:
       - uses: actions/checkout@v1
 
-      - name: Set up Ruby 2.6
-        uses: actions/setup-ruby@v1
-        with:
-          ruby-version: 2.6.x
-
-      - name: Install deps
-        run: |
-          gem install rubocop rubocop-rspec
-
-      - name: Run rubocop
-        run: |
-          rubocop
+      - name: Rubocop
+        uses: ./.github/actions/rubocop
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   ESLint:
     runs-on: ubuntu-latest
