--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-loader": "^2.2.1",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.2",
+    "immer": "^4.0.0",
     "lodash": "^4.17.13",
     "mousetrap": "^1.6.2",
     "prettier": "^1.18.2",
