Make use of new store_records helper
i know how to ruby

add vscode settings

remove an empty button css module

add dev server as a helper script to package.json

this is useful for vscode and it's little run script interface

rails nonce for inline script with store data

wire up modal actions to bulk endpoints

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "lint": "eslint 'app/javascript/'",
     "gen-typings": "yarn run tsm app/javascript/**/*.module.scss",
-    "watch-typings": "yarn run tsm app/javascript/**/*.module.scss -w"
+    "watch-typings": "yarn run tsm app/javascript/**/*.module.scss -w",
+    "dev-server": "bundle exec bin/webpack-dev-server"
   },
   "dependencies": {
     "@babel/preset-react": "^7.0.0",
