--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   },
   "dependencies": {
     "@babel/preset-react": "^7.0.0",
+    "@rails/actioncable": "^6.0.0",
+    "@rails/activestorage": "^6.0.0",
+    "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "^4.0.7",
     "@types/mousetrap": "^1.6.3",
     "@types/react": "^16.8.23",
@@ -28,6 +31,7 @@
     "react-dom": "^16.8.6",
     "react_ujs": "^2.6.0",
     "ts-loader": "^6.0.4",
+    "turbolinks": "^5.2.0",
     "typed-scss-modules": "^0.0.10",
     "typescript": "^3.5.3",
     "webpack-dev-server": "^3.7.2"
