--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -92,8 +92,8 @@ jobs:
       - name: Build Image
         run: |
           docker build \
-            -t docker.pkg.github.com/transientBug/transientbug-rails/app:latest
-            -t docker.pkg.github.com/transientBug/transientbug-rails/app:${GITHUB_SHA}
+            -t docker.pkg.github.com/transientbug/transientbug-rails/app:${GITHUB_REF}-latest
+            -t docker.pkg.github.com/transientbug/transientbug-rails/app:${GITHUB_SHA}
             -f Dockerfile .
 
       #- name: Login to GitHub Docker Registry
@@ -105,5 +105,5 @@ jobs:
 
       #- name: Push to GitHub Docker Registry
         #run: |
-          #docker push docker.pkg.github.com/transientBug/transientbug-rails/app:${GITHUB_REF}-latest
-          #docker push docker.pkg.github.com/transientBug/transientbug-rails/app:${GITHUB_SHA}
+          #docker push docker.pkg.github.com/transientbug/transientbug-rails/app:${GITHUB_REF}-latest
+          #docker push docker.pkg.github.com/transientbug/transientbug-rails/app:${GITHUB_SHA}
