--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -112,4 +112,5 @@ jobs:
 
       - name: Push to GitHub Docker Registry
         run: |
+          docker push docker.pkg.github.com/transientbug/transientbug-rails/app:latest
           docker push docker.pkg.github.com/transientbug/transientbug-rails/app:${GITHUB_SHA}
