--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "immer": "^4.0.0",
     "lodash": "^4.17.13",
     "mousetrap": "^1.6.2",
+    "postcss-mixins": "^6.2.2",
+    "postcss-nested": "^4.1.2",
     "prettier": "^1.18.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
