--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/mousetrap": "^1.6.3",
     "@types/react": "^16.9.3",
     "@types/react-dom": "^16.9.1",
+    "@types/webpack-env": "^1.14.0",
     "@typescript-eslint/eslint-plugin": "^1.12.0",
     "@typescript-eslint/parser": "^1.12.0",
     "babel-eslint": "^10.0.2",
