--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "^4.0.7",
+    "@reduxjs/toolkit": "^1.2.1",
     "@types/mousetrap": "^1.6.3",
     "@types/react": "^16.9.3",
     "@types/react-dom": "^16.9.1",
     "@types/react-modal": "^3.8.3",
+    "@types/react-redux": "^7.1.5",
     "@types/react-select": "^3.0.5",
+    "@types/redux-logger": "^3.0.7",
     "@types/webpack-env": "^1.14.0",
     "@typescript-eslint/eslint-plugin": "^1.12.0",
     "@typescript-eslint/parser": "^1.12.0",
@@ -38,8 +41,10 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-modal": "^3.10.1",
+    "react-redux": "^7.1.3",
     "react-select": "^3.0.8",
     "react_ujs": "^2.6.0",
+    "redux-logger": "^3.0.6",
     "tailwindcss": "^1.1.2",
     "ts-loader": "^6.2.0",
     "turbolinks": "^5.2.0",
