ensure rubocop-rails is in github actions for styles too

--- a/.github/workflows/styles.yml
+++ b/.github/workflows/styles.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Install deps
         run: |
-          gem install rubocop rubocop-rspec
+          gem install rubocop rubocop-rspec rubocop-rails
 
       - name: Run rubocop
         run: |
