--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,7 @@
 {
   "semi": false,
+  "arrowParens": "avoid",
+  "trailingComma": "none",
   "overrides": [
     {
       "files": "*.module.scss.d.ts",
