--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,6 +7,7 @@ AllCops:
   TargetRubyVersion: 2.7
   DisplayCopNames: true
   DisplayStyleGuide: true
+  SuggestExtensions: false
   Include:
     - '**/*.rb'
     - '**/Rakefile'
