--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -27,3 +27,98 @@ Rails/HasManyOrHasOneDependent:
     - 'app/models/tag.rb'
     - 'app/models/user.rb'
     - 'app/models/webpage.rb'
+
+Rails/SkipsModelValidations:
+  Exclude:
+    - 'app/controllers/bookmarks_controller.rb'
+    - 'app/models/bookmark.rb'
+    - 'app/models/tag.rb'
+
+Metrics/AbcSize:
+  Exclude:
+    - 'app/searchers/query_grammar/transformer.rb'
+
+RSpec/MultipleMemoizedHelpers:
+  Exclude:
+    - 'spec/controllers/admin/roles_controller_spec.rb'
+
+Lint/EmptyFile:
+  Exclude:
+    - 'spec/controllers/api/v1/bookmarks_controller_spec.rb'
+    - 'spec/controllers/bookmarks_controller_spec.rb'
+    - 'spec/models/bookmark_spec.rb'
+    - 'spec/models/error_message_spec.rb'
+    - 'spec/models/offline_cache_spec.rb'
+    - 'spec/models/tag_spec.rb'
+    - 'spec/policies/bookmarks_searcher_policy_spec.rb'
+    - 'spec/searchers/concerns/active_record_spec.rb'
+    - 'spec/searchers/concerns/pagination_spec.rb'
+
+Lint/EmptyBlock:
+  Enabled: true
+  Exclude:
+    - 'spec/factories/bookmarks_tags.rb'
+    - 'spec/views/admin/roles/edit.html.haml_spec.rb'
+
+Lint/DuplicateBranch: # (new in 1.3)
+  Enabled: true
+Lint/DuplicateRegexpCharacterClassElement: # (new in 1.1)
+  Enabled: true
+Lint/EmptyClass: # (new in 1.3)
+  Enabled: true
+Lint/NoReturnInBeginEndBlocks: # (new in 1.2)
+  Enabled: true
+Lint/ToEnumArguments: # (new in 1.1)
+  Enabled: true
+Lint/UnexpectedBlockArity: # (new in 1.5)
+  Enabled: true
+Lint/UnmodifiedReduceAccumulator: # (new in 1.1)
+  Enabled: true
+Style/ArgumentsForwarding: # (new in 1.1)
+  Enabled: true
+Style/CollectionCompact: # (new in 1.2)
+  Enabled: true
+Style/DocumentDynamicEvalDefinition: # (new in 1.1)
+  Enabled: true
+Style/NegatedIfElseCondition: # (new in 1.2)
+  Enabled: true
+Style/NilLambda: # (new in 1.3)
+  Enabled: true
+Style/RedundantArgument: # (new in 1.4)
+  Enabled: true
+Style/SwapValues: # (new in 1.1)
+  Enabled: true
+Rails/ActiveRecordCallbacksOrder: # (new in 2.7)
+  Enabled: true
+Rails/AfterCommitOverride: # (new in 2.8)
+  Enabled: true
+Rails/AttributeDefaultBlockValue: # (new in 2.9)
+  Enabled: true
+Rails/FindById: # (new in 2.7)
+  Enabled: true
+Rails/Inquiry: # (new in 2.7)
+  Enabled: true
+Rails/MailerName: # (new in 2.7)
+  Enabled: true
+Rails/MatchRoute: # (new in 2.7)
+  Enabled: true
+Rails/NegateInclude: # (new in 2.7)
+  Enabled: true
+Rails/Pluck: # (new in 2.7)
+  Enabled: true
+Rails/PluckInWhere: # (new in 2.7)
+  Enabled: true
+Rails/RenderInline: # (new in 2.7)
+  Enabled: true
+Rails/RenderPlainText: # (new in 2.7)
+  Enabled: true
+Rails/ShortI18n: # (new in 2.7)
+  Enabled: true
+Rails/SquishedSQLHeredocs: # (new in 2.8)
+  Enabled: true
+Rails/WhereEquals: # (new in 2.9)
+  Enabled: true
+Rails/WhereExists: # (new in 2.7)
+  Enabled: true
+Rails/WhereNot: # (new in 2.8)
+  Enabled: true
